Data/Logs/log-2020-10-29.txt


=============================================================
Время: 2020-10-29 17:17:08.044731

Ошибка:
Command raised an exception: ExtensionFailed: Extension 'Cogs.clans' raised an error: SyntaxError: invalid syntax (clans.py, line 339)
=============================================================

=============================================================
Время: 2020-10-29 17:17:10.984868

Ошибка:
Command "clan" is not found
=============================================================

=============================================================
Время: 2020-10-29 17:17:26.873379

Ошибка:
Traceback (most recent call last):
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 607, in _load_from_module_spec
    spec.loader.exec_module(lib)
  File "<frozen importlib._bootstrap_external>", line 779, in exec_module
  File "<frozen importlib._bootstrap_external>", line 916, in get_code
  File "<frozen importlib._bootstrap_external>", line 846, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "e:\PyProg\ProstoTools\Cogs\clans.py", line 339
    if member.id not in clan['members']
                                      ^
SyntaxError: invalid syntax

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "e:/PyProg/ProstoTools/bot.py", line 77, in <module>
    client.load_extension(f'Cogs.{filename[:-3]}')
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 664, in load_extension
    self._load_from_module_spec(spec, name)
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 610, in _load_from_module_spec
    raise errors.ExtensionFailed(key, e) from e
discord.ext.commands.errors.ExtensionFailed: Extension 'Cogs.clans' raised an error: SyntaxError: invalid syntax (clans.py, line 339)

=============================================================

=============================================================
Время: 2020-10-29 17:18:17.895118

Ошибка:
Command "clan" is not found
=============================================================

=============================================================
Время: 2020-10-29 17:18:23.532043

Ошибка:
Command "clan" is not found
=============================================================

=============================================================
Время: 2020-10-29 17:18:34.689207

Ошибка:
Command "clan" is not found
=============================================================

=============================================================
Время: 2020-10-29 17:18:38.937843

Ошибка:
Command "clan" is not found
=============================================================

=============================================================
Время: 2020-10-29 17:19:28.146200

Ошибка:
Command raised an exception: ExtensionNotLoaded: Extension 'Cogs.clans' has not been loaded.
=============================================================

=============================================================
Время: 2020-10-29 17:19:33.021163

Ошибка:
Command "clan" is not found
=============================================================

=============================================================
Время: 2020-10-29 17:19:57.059877

Ошибка:
Command raised an exception: TypeError: string indices must be integers
=============================================================

=============================================================
Время: 2020-10-29 17:21:54.960020

Ошибка:
Command raised an exception: UnboundLocalError: local variable 'delete_clan' referenced before assignment
=============================================================

=============================================================
Время: 2020-10-29 17:25:01.977399

Ошибка:
Command raised an exception: UnboundLocalError: local variable 'delete_clan' referenced before assignment
=============================================================

=============================================================
Время: 2020-10-29 17:27:40.054796

Ошибка:
Command raised an exception: UnboundLocalError: local variable 'delete_clan' referenced before assignment
=============================================================

=============================================================
Время: 2020-10-29 17:31:45.841744

Ошибка:
Command "help*help" is not found
=============================================================

=============================================================
Время: 2020-10-29 17:32:19.223918

Ошибка:
Command "stats" is not found
=============================================================

=============================================================
Время: 2020-10-29 17:32:41.952800

Ошибка:
Command raised an exception: OperationalError: 2055: Lost connection to MySQL server at 'localhost:3306', system error: 10053 An established connection was aborted by the software in your host machine
=============================================================

=============================================================
Время: 2020-10-29 17:33:33.179426

Ошибка:
name is a required argument that is missing.
=============================================================

=============================================================
Время: 2020-10-29 17:34:28.824852

Ошибка:
Command raised an exception: UnboundLocalError: local variable 'delete_clan' referenced before assignment
=============================================================

=============================================================
Время: 2020-10-29 17:35:21.514038

Ошибка:
Command "members" is not found
=============================================================

=============================================================
Время: 2020-10-29 17:36:34.110052

Ошибка:
clan_id is a required argument that is missing.
=============================================================

=============================================================
Время: 2020-10-29 17:40:48.806367

Ошибка:
clan_id is a required argument that is missing.
=============================================================

=============================================================
Время: 2020-10-29 17:48:20.262587

Ошибка:
Command raised an exception: TypeError: string indices must be integers
=============================================================

=============================================================
Время: 2020-10-29 17:48:45.806459

Ошибка:
Command raised an exception: TypeError: string indices must be integers
=============================================================

=============================================================
Время: 2020-10-29 17:50:04.746406

Ошибка:
Command raised an exception: TypeError: string indices must be integers
=============================================================

=============================================================
Время: 2020-10-29 17:53:33.991147

Ошибка:
Command raised an exception: DatabaseError: 1205 (HY000): Lock wait timeout exceeded; try restarting transaction
=============================================================

=============================================================
Время: 2020-10-29 18:02:18.887855

Ошибка:
Command raised an exception: ProgrammingError: Not all parameters were used in the SQL statement
=============================================================

=============================================================
Время: 2020-10-29 18:03:52.076973

Ошибка:
Command raised an exception: ProgrammingError: 1064 (42000): You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the right syntax to use near '" = 717776571406090310' at line 1
=============================================================